เพิ่มวันที่ สำหรับเคส ลูกค้าขอเลื่อน

--- a/update-status.html
+++ b/update-status.html
@@ -11,6 +11,9 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/feather-icons"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://npmcdn.com/flatpickr/dist/l10n/th.js"></script>
     <style>
       body {
         font-family: "Prompt", sans-serif;
@@ -276,6 +279,21 @@
         width: 20px;
         height: 20px;
       }
+
+      /* เพิ่มสไตล์สำหรับ Date Picker */
+      .date-reschedule-container {
+        display: none;
+        margin-top: 10px;
+        padding: 10px;
+        background: #fff;
+        border: 1px dashed #3b82f6;
+        border-radius: 10px;
+      }
+
+      .date-reschedule-container label {
+        color: #1e40af;
+        margin-top: 0;
+      }
     </style>
   </head>
 
@@ -316,7 +334,7 @@
         <div class="result-section" id="section1">
           <h3>🚚 ผลการวิ่งงาน 1</h3>
           <label>สถานะ</label>
-          <select name="result1" id="result1">
+          <select name="result1" id="result1" onchange="togglePostponeDate(1)">
             <option value="">-- เลือกสถานะ --</option>
             <option>สำเร็จ</option>
             <option>ลูกค้าขอเลื่อน</option>
@@ -325,6 +343,12 @@
             <option>ลูกค้าขอยกเลิก</option>
             <option>ใบหน้างานซ้ำ</option>
           </select>
+
+          <div id="date-postpone-container-1" class="date-reschedule-container">
+            <label>📅 วันที่ขอเลื่อนไปเป็นวันที่</label>
+            <input type="text" id="rescheduledDate1" name="rescheduledDate1" placeholder="คลิกเพื่อเลือกวันที่">
+          </div>
+
           <label>หมายเหตุ</label>
           <textarea
             name="note1"
@@ -336,7 +360,7 @@
         <div class="result-section" id="section2">
           <h3>🚚 ผลการวิ่งงาน 2</h3>
           <label>สถานะ</label>
-          <select name="result2" id="result2">
+          <select name="result2" id="result2" onchange="togglePostponeDate(2)">
             <option value="">-- เลือกสถานะ --</option>
             <option>สำเร็จ</option>
             <option>ลูกค้าขอเลื่อน</option>
@@ -345,6 +369,12 @@
             <option>ลูกค้าขอยกเลิก</option>
             <option>ใบหน้างานซ้ำ</option>
           </select>
+
+          <div id="date-postpone-container-2" class="date-reschedule-container">
+            <label>📅 วันที่ขอเลื่อนไปเป็นวันที่</label>
+            <input type="text" id="rescheduledDate2" name="rescheduledDate2" placeholder="คลิกเพื่อเลือกวันที่">
+          </div>
+
           <label>หมายเหตุ</label>
           <textarea
             name="note2"
@@ -356,7 +386,7 @@
         <div class="result-section" id="section3">
           <h3>🚚 ผลการวิ่งงาน 3</h3>
           <label>สถานะ</label>
-          <select name="result3" id="result3">
+          <select name="result3" id="result3" onchange="togglePostponeDate(3)">
             <option value="">-- เลือกสถานะ --</option>
             <option>สำเร็จ</option>
             <option>ลูกค้าขอเลื่อน</option>
@@ -365,6 +395,12 @@
             <option>ลูกค้าขอยกเลิก</option>
             <option>ใบหน้างานซ้ำ</option>
           </select>
+
+          <div id="date-postpone-container-3" class="date-reschedule-container">
+            <label>📅 วันที่ขอเลื่อนไปเป็นวันที่</label>
+            <input type="text" id="rescheduledDate3" name="rescheduledDate3" placeholder="คลิกเพื่อเลือกวันที่">
+          </div>
+
           <label>หมายเหตุ</label>
           <textarea
             name="note3"
@@ -598,19 +634,22 @@
             .toString()
             .padStart(2, "0")}/${now.getFullYear()}`;
 
+          // ฟังก์ชันตรวจสอบว่าเป็นสถานะขอเลื่อนหรือไม่
+          const isPostpone = (val) => val === "ลูกค้าขอเลื่อน" || val === "พนักงานขอเลื่อน";
+
           const payload = {
             action: "update",
             orderNo,
             messengerName, // ✅ ใส่ชื่อพนักงานใน payload
             id: userData.id || "", // ✅ ใส่ id ของพนักงาน
             result1: result1 || "",
-            date1: result1 ? autoDate : "", // ส่งวันที่เฉพาะถ้ามีการเลือกสถานะ
+            date1: result1 ? (isPostpone(result1) ? formData.get("rescheduledDate1") : autoDate) : "",
             note1: note1 || "",
             result2: result2 || "",
-            date2: result2 ? autoDate : "",
+            date2: result2 ? (isPostpone(result2) ? formData.get("rescheduledDate2") : autoDate) : "",
             note2: note2 || "",
             result3: result3 || "",
-            date3: result3 ? autoDate : "",
+            date3: result3 ? (isPostpone(result3) ? formData.get("rescheduledDate3") : autoDate) : "",
             note3: note3 || "",
             timestamp: new Date().toLocaleString("th-TH"),
           };
@@ -658,6 +697,28 @@
       else orderInput.focus();
 
       feather.replace();
+
+      // ฟังก์ชันเปิด/ปิดช่องกรอกวันที่ขอเลื่อน
+      function togglePostponeDate(index) {
+        const select = document.getElementById(`result${index}`);
+        const container = document.getElementById(`date-postpone-container-${index}`);
+        const dateInput = document.getElementById(`rescheduledDate${index}`);
+
+        if (select.value === "ลูกค้าขอเลื่อน" || select.value === "พนักงานขอเลื่อน") {
+          container.style.display = "block";
+          if (!dateInput._flatpickr) {
+            flatpickr(dateInput, {
+              locale: "th",
+              altInput: true,
+              altFormat: "d/m/Y",
+              dateFormat: "d/m/Y",
+              defaultDate: "today",
+            });
+          }
+        } else {
+          container.style.display = "none";
+        }
+      }
 
       function handleLogout() {
         if (confirm("คุณต้องการออกจากระบบใช่หรือไม่?")) {
