--- a/scan.html
+++ b/scan.html
@@ -314,6 +314,7 @@
 
           if (orderId) {
             isScanning = false; // หยุดสแกนชั่วคราว
+            const cleanOrderId = orderId.toString().replace(/^0+/, ""); // ตัดเลข 0 ข้างหน้า
 
             // ✅ แสดง UI สำเร็จแบบไม่มีข้อความ
             document
@@ -323,39 +324,33 @@
             document.getElementById("header-icon").style.color =
               "var(--success)";
 
-            // ✅ ดึงข้อมูลพนักงานจาก localStorage
-            const userData = JSON.parse(
-              localStorage.getItem("tn_employee_user") || "{}"
-            );
-
-            // ✅ เตรียม payload ส่ง API
-            const payload = {
-              action: "update",
-              orderNo: orderId,
-              messengerName: userData.username || "Unknown",
-              id: userData.id || "",
-              timestamp: new Date().toLocaleString("th-TH"),
-            };
-
-            // ✅ ยิง API (JSONP)
+            // ✅ ยิง API เพื่อดึงข้อมูลงาน (get_task_by_id)
             const callbackName = "callback_" + Date.now();
             window[callbackName] = function (response) {
-              console.log("Auto-update success:", response);
+              console.log("Fetch task success:", response);
+              
+              if (response && response.result === "success" && response.data) {
+                // ✅ บันทึกลง localStorage (tasks_employee)
+                const storedTasks = JSON.parse(localStorage.getItem("tasks_employee") || "{}");
+                storedTasks[cleanOrderId] = response.data; // เก็บข้อมูลลงใน key ที่เป็นเลขที่ใบสั่งงาน (เขียนทับถ้าซ้ำ)
+                localStorage.setItem("tasks_employee", JSON.stringify(storedTasks));
+              }
+
               delete window[callbackName];
               document.body.removeChild(script);
 
-              // เมื่อ API สำเร็จ พากลับไปหน้าอัปเดต
+              // เมื่อทำเสร็จแล้ว พากลับไปหน้าอัปเดต
               setTimeout(() => {
                 window.location.href = `update-status.html?order=${orderId}`;
               }, 500);
             };
 
             const script = document.createElement("script");
-            script.src = `${SCRIPT_URL}?callback=${callbackName}&action=update&data=${encodeURIComponent(
-              JSON.stringify(payload)
+            script.src = `${SCRIPT_URL}?callback=${callbackName}&action=get_task_by_id&data=${encodeURIComponent(
+              JSON.stringify({ orderNo: cleanOrderId })
             )}`;
             script.onerror = function () {
-              console.error("Auto-update failed");
+              console.error("Auto-fetch failed");
               delete window[callbackName];
               window.location.href = `update-status.html?order=${orderId}`;
             };
